--- a/src/scss/blocks/header.scss
+++ b/src/scss/blocks/header.scss
@@ -1,5 +1,6 @@
 .header {
 	padding: 30px 0;
+	overflow: hidden;
 	@include to(992px) {
 		padding: 25px 0;
 	}
@@ -80,9 +81,6 @@
 		line-height: 100%;
 		color: #ffffff;
 		transition: color 0.3s;
-		@include to(576px) {
-			font-size: 16px;
-		}
 		&:hover {
 			color: $dark;
 			transition: color 0.3s;
@@ -115,18 +113,19 @@
 	&__menu {
 		display: none;
 		overflow: auto;
-		background-color: $yel;
-		position: absolute;
-		padding: 60px 30px 30px 30px;
+		background-color: #fff;
+		box-shadow: 0px 5px 30px rgba(67, 51, 0, 0.5);
+		border-radius: 5px 0px 0px 5px;
+		position: fixed;
+		padding: 26px 30px 22px 30px;
 		flex-flow: column nowrap;
-		justify-content: space-between;
-		align-items: center;
-		top: 80px;
-		left: 0px;
+		right: 0;
+		top: 0;
 		width: 100%;
-		height: calc(100vh - 80px);
+		max-width: 260px;
+		height: 100vh;
 		z-index: 50;
-		transform: translateX(-100%);
+		transform: translateX(100%);
 		visibility: hidden;
 		opacity: 0;
 		pointer-events: none;
@@ -196,14 +195,68 @@
 				}
 			}
 		}
+		&-close {
+			display: flex;
+			margin-left: auto;
+		}
+		&-descr {
+			margin-top: 20px;
+		}
+		&-logo {
+			font-weight: 500;
+			font-size: 10px;
+			line-height: 10px;
+			color: #383838;
+			span {
+				font-weight: 900;
+				font-size: 16px;
+				line-height: 15px;
+				color: #393939;
+			}
+		}
+		&-copyright {
+			margin-top: 5px;
+			font-weight: normal;
+			font-size: 12px;
+			line-height: 115.2%;
+			color: #a3a3a3;
+		}
 		.header__nav {
+			margin-top: 60px;
+			align-items: flex-start;
 			a {
-				font-weight: 600;
-				font-size: 14px;
-				line-height: 17px;
+				display: flex;
+				align-items: center;
+				font-weight: bold;
+				font-size: 16px;
+				line-height: 15px;
+				color: #393939;
+				&:hover {
+					&::after {
+						width: calc(100% + 2px);
+					}
+					path {
+						fill: #edb810;
+						transition: fill 0.3s;
+					}
+				}
+				&::after {
+					left: -1px;
+					transform: unset;
+				}
 				&:not(:last-child) {
 					margin-right: 0;
-					margin-bottom: 20px;
+					margin-bottom: 30px;
+				}
+				span,
+				path {
+					pointer-events: none;
+				}
+				span {
+					margin-right: 10px;
+				}
+				path {
+					transition: fill 0.3s;
 				}
 			}
 			@include to(992px) {
@@ -211,14 +264,34 @@
 			}
 		}
 		.header__call {
+			margin-top: auto;
+			color: #edb810;
 			img {
+				pointer-events: none;
 				display: block;
+				margin-right: 8px;
 			}
 			span {
+				pointer-events: none;
 				@include to(576px) {
 					display: block;
 				}
 			}
+		}
+	}
+	&__overlay {
+		display: none;
+		position: fixed;
+		top: 0;
+		right: 0;
+		left: 0;
+		bottom: 0;
+		width: 100%;
+		height: 100%;
+		background-color: transparent;
+		z-index: 45;
+		.header--opened & {
+			display: block;
 		}
 	}
 }
