--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,3 +32,7 @@ body {
 		}
 	}
 }
+
+main {
+	overflow: hidden;
+}
